fixed some spacing, added top image placeholder

--- a/artist.css
+++ b/artist.css
@@ -8,11 +8,16 @@
     --blue: #4688d7;
 }
 
+*, *::before, *::after{
+    padding: 0;
+    margin: 0;
+}
+
+
+
 body{
     background-color: var(--black);
     font-family: "Roboto", sans-serif;
-    padding: none;
-    margin: 0;
 }
 
 a {
@@ -21,4 +26,118 @@ a {
 
 a:hover {
     color: var(--sand);
+}
+
+.sidebar-placeholder{
+    position: fixed;
+    left: 0;
+    background-color: black;
+    top: 0;
+    bottom: 0;
+    width: 196px;
+    padding: 24px;
+}
+
+.sidebar-placeholder .logo {
+    width: 160px;
+}
+
+.main-container{
+    margin-left: 245px;
+    margin-bottom: 100px;
+}
+
+.topbar{
+    display: flex;
+    justify-content: space-between;
+    padding: 14px 30px;
+}
+
+.topbar .prev-next-buttons button {
+    vertical-align: middle;
+    color: var(--grey);
+    cursor: pointer;
+    width: 34px;
+    height: 34px;
+    border-radius: 100%;
+    font-size: 18px;
+    border: 0px;
+    background-color: black;
+    margin-right: 10px;
+}
+
+.topbar .navbar {
+    display: flex;
+    align-items: center;
+}
+
+.topbar .navbar ul {
+    list-style: none;
+}
+
+.topbar .navbar ul li {
+    display: inline-block;
+    margin: 0px 8px;
+    width: 70px;
+}
+
+.topbar .navbar ul li a {
+    color: var(--sand);
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 14px;
+    letter-spacing: 1px;
+}
+
+.topbar .navbar ul li a:hover,
+.topbar .navbar ul li a:active,
+.topbar .navbar ul li a:focus {
+    color: white;
+    font-size: 15px;
+}
+
+.topbar .navbar ul li.divider {
+  color: #ffffff;
+  font-size: 26px;
+  margin: 0px 20px;
+  width: auto;
+  user-select: none;
+}
+
+.topbar .navbar button {
+    background-color: white;
+    color: black;
+    font-size: 16px;
+    font-weight: bold;
+    padding: 14px 30px;
+    border: 0px;
+    border-radius: 40px;
+    cursor: pointer;
+    margin-left: 20px;
+}
+
+.topbar .navbar button:hover,
+.topbar .navbar button:active,
+.topbar .navbar button:focus {
+}
+
+.artist-container{
+    background-image: linear-gradient(rgba(0, 0, 0, 0.6) 20%, rgba(0, 0, 0, 0)),
+    url(https://cdn.britannica.com/89/181289-050-427762A2/Thomas-Bangalter-Guy-Manuel-de-Homem-Christo-Daft-Punk-2013.jpg);
+    background-size: cover;
+    height: 400px;
+    position: relative;
+}
+
+.artist-text-container{
+    position: absolute;
+    bottom: 0;
+    margin-left: 30px;
+    top: 65%;
+}
+
+.artist-text-container h1 {
+    font-size: 5em;
+    font-weight: bold;
+    color: white;
 }
